--- a/webapp/view/IncreasePrice.fragment.xml
+++ b/webapp/view/IncreasePrice.fragment.xml
@@ -1,24 +1,24 @@
 <core:FragmentDefinition xmlns="sap.m"
     xmlns:core="sap.ui.core">
-    <Dialog id="bulkPriceDialog" title="Bulk Price Update" stretchOnPhone="true">
+    <Dialog id="bulkPriceDialog" title="{i18n>BULK_PRICE_DIALOG_TITLE}" stretchOnPhone="true">
         <content>
             <VBox class="sapUiSmallMargin">
-                <Label text="Apply same % to all selected products (optional)"/>
+                <Label text="{i18n>BULK_PRICE_LABEL_APPLY_PERCENT}"/>
                 <Input id="inpBulkPercentage" value="{createModel>/bulkPercent}" type="Number" placeholder="Enter % e.g., 10" liveChange=".onBulkPercentageChange"/>
 
                 <Table id="bulkPriceTable" items="{createModel>/selectedProducts}">
                     <columns>
                         <Column>
-                            <Text text="Product"/>
+                            <Text text="{i18n>BULK_PRICE_COLUMN_PRODUCT}"/>
                         </Column>
                         <Column>
-                            <Text text="Current Price"/>
+                            <Text text="{i18n>BULK_PRICE_COLUMN_CURRENT_PRICE}"/>
                         </Column>
                         <Column>
-                            <Text text="Increase %"/>
+                            <Text text="{i18n>BULK_PRICE_COLUMN_PERCENT}"/>
                         </Column>
                         <Column>
-                            <Text text="New Price"/>
+                            <Text text="{i18n>BULK_PRICE_COLUMN_NEW_PRICE}"/>
                         </Column>
                     </columns>
                     <items>
@@ -37,8 +37,8 @@
         <footer>
             <Toolbar>
                 <ToolbarSpacer/>
-                <Button text="Save" type="Accept" press=".onSaveInPrice"/>
-                <Button text="Cancel" type="Reject" press=".onCancelInPrice"/>
+                <Button text="{i18n>BULK_PRICE_BUTTON_SAVE}" type="Accept" press=".onSaveInPrice"/>
+                <Button text="{i18n>BULK_PRICE_BUTTON_CANCEL}" type="Reject" press=".onCancelInPrice"/>
             </Toolbar>
         </footer>
     </Dialog>
